# obs-rtmp-nicolive

./: .clang-format  .clang_complete  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  FindOBS.cmake  LICENSE  README.md  VERSION  nico-live-api.cpp  nico-live-api.hpp  nico-live-cmd-server.cpp  nico-live-cmd-server.hpp  nico-live-timer.cpp  nico-live-timer.hpp  nico-live-watcher.cpp  nico-live-watcher.hpp  nico-live.cpp  nico-live.hpp  nicolive-api.cpp  nicolive-api.h  nicolive-errno.c  nicolive-errno.h  nicolive-log.cpp  nicolive-log.h  nicolive-operation.c  nicolive-operation.h  nicolive-ui.cpp  nicolive-ui.h  nicolive.c  nicolive.cpp  nicolive.h  nicookie.cpp  nicookie.h  nicookie_memo.txt  none_CMakeLists.txt  rtmp-nicolive.c
data/locale/: en-US.ini  ja-JP.ini
doc/: INSTALL.md  PROTOCOL.md  TODO.md
tools/: installmemo.md
tools/cmake/: CMakeLists.txt  FindOBS.cmake
tools/osx/: MAC_INSTALL.md  README.txt  convert_readme.rb  fix_rpath.rb  install.sh  make_package.sh  make_pkg.sh
tools/ubuntu/: make_package.sh
tools/win/: README.txt  WIN_INSTALL.md  _make_package.cmd  convert_readme.rb  covert_readme.rb  make_build.cmd  make_lib.rb  make_package.sh
